Fixed logo for collapsed navBar

--- a/style.css
+++ b/style.css
@@ -27,9 +27,17 @@ form{
 	font-size: 2em;
 }
 
-.logo{
-	position: absolute; top:3px; left:0;
+.logo img{
+	position: inherit; 
 	z-index: -1;
+	top: 3px;
+}
+
+.logo{
+	position: absolute; 
+	top:0; 
+	left:0;
+	z-index: 1;
 }
 
 button.navbar-toggler{
